@@ -1,0 +1,1 @@
+.. automodule:: MDAnalysis.analysis.hbonds.hbond_analysis
