@@ -59,7 +59,8 @@ The rules for this file:
     files or a stream (such as cStringIO.StringIO) wrapped in
     util.NamedStream; currently supported: PDB, PSF, CRD, PQR, PDBQT,
     GRO, MOL2, XYZ
-  
+  * Added hydrogen bonding time autocorrelation analysis module
+    (analysis.hbonds.HydrogenBondAutoCorrel)
 
   Changes
 
